# HRI_Tactile

./: Command_Line_Notes  Command_Line_Notes.md  Command_Line_Notes.md~  Command_Line_Notes~  DQN_NAO.py  Instruction.md  Instruction.md~  README.md  cal_reward.py  central_node.py  excute.py  guide_reward_test.py  joint_control.py  joint_pub.py  joint_pub_for_test.py  joint_test.py  numpy_listener.py  progress_notes.md  progress_notes.md~  push_pull_test.py  state_pub.py  stiffnesstest.py  subtest.py
NAO_scripts/: excute.py  joint_pub.py
Previous_Student_Work/: nao_rviz_2patches.py  navigation_arms.py~  navigation_arms_chest.py~
Real_Nao_Manipulation/: ReadMe.md  package.xml
Related_Work/: draw_animation.py  forearm_right.xml  para0.csv  para1.csv  urdf.rviz
Related_Work/Previous_Work(Ubuntu14.04)/tum_skin_tests_fiad/: CMakeLists.txt  CMakeLists.txt~  package.xml
Related_Work/Previous_Work(Ubuntu14.04)/tum_skin_tests_fiad/launch/: .get_distance.launch.kate-swp  MK.launch  get_distance.launch  pub_all_ids.launch  rviz_test.launch  tum_skin_driver_fiad_ftdi.launch  tum_skin_driver_fiad_tsu.launch  tum_skin_driver_fiad_tsu.launch~  viz_test.launch  viz_test_no_rviz.launch
Related_Work/Previous_Work(Ubuntu14.04)/tum_skin_tests_fiad/launch/publish_ids/: back_left_arm_leg.launch  front_back_arms_upper.launch  front_right_arm_leg.launch  pub_front_and_right_arm.launch  pub_hand.launch  pub_left_arm.launch  pub_right_hand.launch~  pub_two_arm_upper.launch
Related_Work/Previous_Work(Ubuntu14.04)/tum_skin_tests_fiad/launch/rvizConfigs/: visualize_skin_patch_260.rviz
Related_Work/Previous_Work(Ubuntu14.04)/tum_skin_tests_fiad/scripts/: collect_tr_data.py  id_identification.py  nao_2patches_rviz.py  nao_naovigation_7cells .py  nao_navigation_rviz.py  nao_navigation_two_arm_upper.py  nao_stand.py  pca_plot.py  plot_raw_data.py  touch_prediction.py  touch_prediction_nao_speaking.py
Related_Work/Previous_Work(Ubuntu14.04)/tum_skin_tests_fiad/src/Applications/: CMakeLists.txt~  all_cells.cpp  back.cpp  back_left_leg.cpp  front.cpp  front_right_leg.cpp  hand.cpp  left_arm.cpp  left_arm_upper.cpp  main_viz_test.cpp  right_arm.cpp  right_arm_upper.cpp
Skin_NAO_Tutorial&lib/tum_ics_skin_nao/: CMakeLists.txt  package.xml
Skin_NAO_Tutorial&lib/tum_ics_skin_nao/launch/: load_and_view_patch.launch  load_and_view_patches.launch  skin_driver_tsu.launch
Skin_NAO_Tutorial&lib/tum_ics_skin_nao/launch/configs/: patch_list.yaml
Skin_NAO_Tutorial&lib/tum_ics_skin_nao/parameters/SkinConfigs/: lower_leg_left.xml  upper_leg_left.xml
Skin_NAO_Tutorial&lib/tum_ics_skin_nao/src/Applications/: main_load_and_view_patch_tut_fiad.cpp
(+320 files in other folders)
