<package>
  <name>tum_skin_tests_fiad</name>
  <version>0.0.0</version>
  <description>The skin tests package</description>

  <author email="florian.bergner@tum.de">Florian Bergner</author>
  <maintainer email="florian.bergner@tum.de">Florian Bergner</maintainer>
  <url type="website">http://ics.ei.tum.de</url>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tum_skin_msgs_fiad</build_depend>
  <build_depend>tum_skin_bridge_fiad</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>tum_skin_msgs_fiad</run_depend>	
  <run_depend>tum_skin_bridge_fiad</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
